[project]
name = "strands"
version = "0.1.0"
description = "Strands Agents API - Comprehensive agent management with memory, budget analysis, and portfolio orchestration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core FastAPI dependencies
    "fastapi[standard]==0.115.6",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",

    # Strands Agents SDK and tools
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",

    # AWS SDK for Bedrock integration
    "boto3>=1.35.0",
    "botocore>=1.35.0",

    # Memory backend dependencies (Lab 2)
    # FAISS for local vector storage (default)
    "faiss-cpu>=1.9.0",
    # mem0.ai for memory management
    "mem0ai>=0.1.0",
    # OpenSearch for AWS memory backend (optional)
    "opensearch-py>=2.7.0",

    # Data analysis and visualization (Lab 1 & 3)
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",

    # Financial data (Lab 3)
    "yfinance>=0.2.0",

    # Additional dependencies
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",

    # Logging and monitoring
    "python-json-logger>=3.2.0",
]
